# cyscan

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  NOTICE  README.md
.github/: CODEOWNERS  actionlint.yaml
.github/workflows/: advisories-refresh.yml  ci.yml  release.yml
assets/: index.html
community/: README.md
community/dsl-conformance/: README.md  schema.md
community/type-hierarchy-harvester/: CONTRIBUTING.md  METHODOLOGY.md  README.md  schema.json
rules/advisories/: crates-io.jsonl  go.jsonl  npm.jsonl  pypi.jsonl  seed.jsonl
rules/arm/: arm-aks-no-network-policy.yml  arm-aks-no-rbac.yml  arm-appservice-ftp.yml  arm-appservice-http.yml  arm-appservice-tls.yml  arm-hardcoded-password.yml  arm-kv-no-purge-protection.yml  arm-kv-no-soft-delete.yml  arm-no-secure-param.yml  arm-nsg-inbound-any.yml  arm-nsg-rdp-open.yml  arm-nsg-ssh-open.yml  arm-sql-firewall-all.yml  arm-sql-no-audit.yml  arm-sql-no-tde.yml  arm-storage-http.yml  arm-storage-no-encryption.yml  arm-storage-public-blob.yml  arm-storage-tls-version.yml
rules/bash/: bash-hooks-no-input-validation-bash.yml  bash-hooks-relative-script-path-bas.yml  bash-hooks-unquoted-variable-bash-e.yml  bash-ifs-tampering.yml  bash-iteration-over-ls-output.yml  bash-unquoted-command-substitution-.yml  bash-useless-cat.yml
rules/c/: c-c-string-equality.yml  c-double-goto.yml  c-incorrect-use-ato-fn.yml  c-incorrect-use-sscanf-fn.yml  c-info-leak-on-non-formated-stri.yml  c-insecure-use-gets-fn.yml  c-insecure-use-memset.yml  c-insecure-use-scanf-fn.yml  c-insecure-use-strcat-fn.yml  c-insecure-use-string-copy-fn.yml  c-insecure-use-strtok-fn.yml
rules/cloudformation/: cfn-alb-http-listener.yml  cfn-cloudtrail-no-encryption.yml  cfn-cloudtrail-no-log-validation.yml  cfn-ebs-no-encryption.yml  cfn-hardcoded-secret.yml  cfn-iam-wildcard-action.yml  cfn-iam-wildcard-resource.yml  cfn-lambda-no-tracing.yml  cfn-rds-no-backup.yml  cfn-rds-no-deletion-protection.yml  cfn-rds-no-encryption.yml  cfn-rds-public.yml  cfn-s3-no-encryption.yml  cfn-s3-no-logging.yml  cfn-s3-no-versioning.yml  cfn-s3-public-acl.yml  cfn-sg-ingress-all-ipv6.yml  cfn-sg-ingress-all.yml  cfn-sg-rdp-open.yml  cfn-sg-ssh-open.yml  cfn-sns-no-encryption.yml  cfn-sqs-no-encryption.yml
rules/csharp/: csha-command-injection.yml  csha-correctness-double-epsilon-equ.yml  csha-detect-openai.yml  csha-insecure-cookie-config.yml  csha-insecure-deserialization.yml  csha-insecure-jwt-validation.yml  csha-missing-or-broken-authorizatio.yml  csha-mvc-missing-antiforgery.yml  csha-open-redirect.yml  csha-path-traversal.yml  csha-sql-injection.yml  csha-stacktrace-disclosure.yml  csha-unsigned-security-token.yml  csha-use-deprecated-cipher-algorith.yml  csha-use-weak-rsa-encryption-paddin.yml  csha-weak-crypto-md5-sha1.yml  csha-xss-html-raw.yml
rules/docker/: dock-add-instead-of-copy.yml  dock-apk-no-cache.yml  dock-apt-no-recommends.yml  dock-apt-no-yes.yml  dock-avoid-apk-upgrade.yml  dock-avoid-apt-get-upgrade.yml  dock-avoid-dnf-update.yml  dock-avoid-platform-with-from.yml  dock-avoid-yum-update.yml  dock-avoid-zypper-update.yml  dock-dnf-no-clean.yml  dock-dockerfile-pip-extra-index-url.yml  dock-ds-0002.yml  dock-expose-ssh.yml  dock-last-user-is-root.yml  dock-latest-tag.yml  dock-maintainer-deprecated.yml  dock-maintainer-is-deprecated.yml  dock-missing-apk-no-cache.yml  dock-missing-assume-yes-switch.yml  dock-missing-dnf-assume-yes-switch.yml  dock-missing-dnf-clean-all.yml  dock-missing-no-install-recommends.yml  dock-missing-user-entrypoint.yml  dock-missing-user.yml  dock-missing-yum-assume-yes-switch.yml  dock-missing-zypper-clean.yml  dock-missing-zypper-no-confirm-swit.yml  dock-multiple-entrypoint-instructio.yml  dock-multiple-entrypoint.yml  dock-multiple-healthcheck.yml  dock-no-sudo-in-dockerfile.yml  dock-nonsensical-command.yml  dock-prefer-apt-get.yml  dock-prefer-copy-over-add.yml  dock-remove-package-cache.yml  dock-remove-package-lists.yml  dock-run-sudo.yml  dock-secrets-in-env.yml  dock-update-alone.yml  (+5 more)
rules/gcp-dm/: gdm-compute-default-sa.yml  gdm-compute-ip-forwarding.yml  gdm-compute-no-shielded.yml  gdm-compute-public-ip.yml  gdm-compute-serial-port.yml  gdm-firewall-all-ingress.yml  (+12 more)
src/: cia.rs  cli.rs  finding.rs  fixer.rs  framework.rs  gui.rs  hardware_rot.rs  lang.rs  lib.rs  main.rs  rule.rs  scanner.rs  self_update.rs  triage.rs
tests/: integration.rs
(+1735 files in other folders)
