[package]
name        = "cyscan"
version     = "0.12.0"
edition     = "2021"
description = "Cybrium Scan — fast multi-language SAST engine"
license     = "Apache-2.0"
repository  = "https://github.com/cybrium-ai/cybrium"
readme      = "README.md"
rust-version = "1.75"

[[bin]]
name = "cyscan"
path = "src/main.rs"

[dependencies]
# CLI
clap        = { version = "4.5", features = ["derive"] }

# Rule + output serialisation
serde       = { version = "1",   features = ["derive"] }
serde_json  = "1"
serde_yaml  = "0.9"

# File walking + parallelism
ignore      = "0.4"
rayon       = "1.10"

# Regex fallback matcher — RE2-style engine, no backtracking
regex       = "1.11"

# Tree-sitter core + per-language grammars. Pinned to versions known
# compatible with the tree-sitter 0.22 API.
tree-sitter            = "0.22"
tree-sitter-python     = "0.21"
tree-sitter-javascript = "0.21"
tree-sitter-go         = "0.21"

# Logging + error handling — keep it small
anyhow      = "1"
thiserror   = "1"
log         = "0.4"
env_logger  = "0.11"

# Colour output for the text reporter — honours NO_COLOR by default
colored     = "2"

# Supply-chain parsers. toml for Cargo.lock, semver for version ranges.
toml        = { version = "0.8", default-features = false, features = ["parse"] }
semver      = "1"

# SARIF shape types — we emit SARIF manually via serde_json rather than
# dragging in the sarif crate, which is heavy and overkill for v0.1.

# Self-update (blocking HTTP for sync CLI)
reqwest     = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false }
walkdir = "2.5.0"
flate2 = "1.1.9"
urlencoding = "2"
tar = "0.4.45"
tempfile = "3"

[dev-dependencies]
assert_cmd     = "2"
predicates     = "3"

[profile.release]
lto           = "thin"
codegen-units = 1
strip         = "symbols"
opt-level     = 3
