[package]
name        = "cyscan"
version     = "1.1.0"
edition     = "2021"
description = "Cybrium Scan — fast multi-language SAST engine"
license     = "Apache-2.0"
repository  = "https://github.com/cybrium-ai/cybrium"
readme      = "README.md"
rust-version = "1.75"

[[bin]]
name = "cyscan"
path = "src/main.rs"

[dependencies]
# CLI
clap        = { version = "4.5", features = ["derive"] }

# Rule + output serialisation
serde       = { version = "1",   features = ["derive"] }
serde_json  = "1"
serde_yaml  = "0.9"

# File walking + parallelism
ignore      = "0.4"
rayon       = "1.10"

# Path-glob matching for the rule schema's `paths.include` /
# `paths.exclude` fields (transitively comes via `ignore`, but we
# pin a direct dep so the API is stable here).
globset     = "0.4"

# Regex fallback matcher — RE2-style engine, no backtracking
regex       = "1.11"

# Tree-sitter core + per-language grammars. Pinned to versions known
# compatible with the tree-sitter 0.22 API.
tree-sitter            = "0.22"
tree-sitter-python     = "0.21"
tree-sitter-javascript = "0.21"
tree-sitter-go         = "0.21"

# Logging + error handling — keep it small
anyhow      = "1"
thiserror   = "1"
log         = "0.4"
env_logger  = "0.11"

# Colour output for the text reporter — honours NO_COLOR by default
colored     = "2"

# Supply-chain parsers. toml for Cargo.lock, semver for version ranges.
toml        = { version = "0.8", default-features = false, features = ["parse"] }
semver      = "1"

# SARIF shape types — we emit SARIF manually via serde_json rather than
# dragging in the sarif crate, which is heavy and overkill for v0.1.

# Self-update + supply-chain registry verification. Uses native-tls
# (not rustls) — earlier work moved to native-tls specifically to drop
# the `ring` dep behind RUSTSEC-2025-0009. Cross-compile (aarch64-linux,
# etc.) is handled by the `openssl` vendored feature below: build
# scripts compile openssl from source for the target arch instead of
# requiring `libssl-dev:arm64` etc. on the runner.
reqwest     = { version = "0.12", features = ["blocking", "json", "native-tls"], default-features = false }
openssl     = { version = "0.10", features = ["vendored"] }
walkdir = "2.5.0"
flate2 = "1.1.9"
urlencoding = "2"
tar = "0.4.45"
tempfile = "3"

[dev-dependencies]
assert_cmd     = "2"
predicates     = "3"

[profile.release]
lto           = "thin"
codegen-units = 1
strip         = "symbols"
opt-level     = 3
